--- a/css/styles.css
+++ b/css/styles.css
@@ -83,8 +83,18 @@ align-items: center;
 text-align: center;
 border-radius: 4px;
 letter-spacing: 0.06em;
-margin-bottom: 200px;
+margin-right: auto;
+margin-left: auto;
+margin-top: 30px;
 
+}
+
+.title-hero-wrapper{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 200px;
+  
 }
 
 .title-hero{
@@ -95,8 +105,6 @@ margin-bottom: 200px;
  letter-spacing: 0.06em;
  text-transform: uppercase;
  color: #FFFFFF; 
- margin-top: 200px;
- margin-bottom: 30px;
  margin-left: auto;
  margin-right: auto;
 }
@@ -115,6 +123,9 @@ margin-bottom: 200px;
   background-repeat: no-repeat;
   background-position: center;
   background-color: var(--secondary-text-color);
+  padding-top: 0px;
+  text-align: center;
+  padding-bottom: 200px;
 }
 
 /* nav */
@@ -282,17 +293,7 @@ letter-spacing: 0.06em;
 color: #212121;
 }
 
-.customers-logo{
-  width: 170px;
-  height: 190px;
-  fill: var(--customers-logo);
-  border: 2px;
-}
 
-.customers-logo:hover,
-.customers-logo:focus{
-fill: var(--accent-color);
-}
 
 .about-team{
   display: flex;
@@ -310,8 +311,16 @@ fill: var(--accent-color);
   margin-bottom: 50px;
 }
 
+.team-employee{
+  height: 422px;
+  width: 270px;
+  background-color: var(--primary-background-color);
+  box-shadow:  0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);;
+  border-radius:  0px 0px 4px 4px;
+}
+
 .team-name{
-  margin-top: 0px;
+  margin-top: 30px;
   margin-bottom: 10px;
 }
 
@@ -319,8 +328,6 @@ fill: var(--accent-color);
   margin-top: 0px;
   margin-bottom: 16px;
 }
-
-
 
 .section-paragraph{
  color: #FFFFFF; 
@@ -349,20 +356,25 @@ fill: var(--accent-color);
 .team-icon{
   display: flex;
  text-align: center;
+ padding-left: 32px;
+ padding-right: 32px;
 } 
 
 .team-icon-img:not(:last-child){
-margin-right: 34px;
+margin-right: 10px;
 }
 
 .team-icon-img{
   height: 44px;
   width: 44px;
+  
 }
 
 .team-icon-image{
  height: 20px;
  width: 20px;
+ margin-top: 16px;
+ margin-bottom: 24px;
 }
 
 .team-icon-link{
@@ -395,8 +407,13 @@ margin-right: 34px;
   box-sizing: border-box;
 }
 
-.regular-customers-logo:hover{
+.regular-customers-logo:hover,
+.regular-customers-logo:focus{
   border-color: var(--accent-color);
+}
+
+.regular-customers-logo:hover .customers-logo{
+  fill: var(--accent-color);
 }
 
 .regular-customers{
@@ -406,15 +423,11 @@ margin-right: 34px;
 .regular-logo:not(:last-child){
   margin-right: 30px;
 }
-
-.filter-button{
- display: flex;
- justify-content: center;
-
- }
-
-.filter-button .item:not(:last-child){
- margin-right: 8px;
+.customers-logo{
+  width: 170px;
+  height: 190px;
+  fill: var(--customers-logo);
+  border: 2px;
 }
 
 .gallery{
@@ -438,11 +451,13 @@ margin-right: 34px;
 .section-name{
   margin-top: 0px;
   margin-bottom: 4px;
+  text-align: left;
 }
 
 .section-customer{
   margin-top: 0px;
-  margin-bottom: 20px
+  margin-bottom: 20px;
+  text-align: left;
 }
 
 .section-paragraph{
@@ -462,15 +477,55 @@ margin-right: 34px;
   letter-spacing: 0.03em;
 }
 
+/* button */
+.button{
+  color:var(--primary-text-color);
+  background-color: var(--secondary-background-color); 
+  border-color: var(--secondary-background-color); 
+  font-family: inherit;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.6;
+  text-align: center;
+  letter-spacing: 0.03em;
+  border-radius: 4px;
+  height: 38px;
+  padding-top: 6px;
+  padding-bottom: 6px;
+  padding-left: 22px;
+  padding-right: 22px;
+  box-shadow: none;
+  }
+
+.button:hover,
+.button:focus{
+ background-color:var(--accent-color);
+ color:var(--accent-color-white);
+}
+
+.button-list{
+  padding-bottom: 0px;
+}
+
+.filter-button{
+ display: flex;
+ justify-content: center;
+ }
+ 
+.filter-button .item:not(:last-child){
+ margin-right: 8px;
+}
+
+.gallery-content{
+  padding-top: 34px;
+}
+
 /* footer */
 footer{
  background-color: var(--footer-background-color);
 }
 
-.copyright{
- color: var(--secondary-text-color);
-
-}
 .logo.footer{
 margin-top: 0px;
 margin-bottom: 8px;
@@ -500,8 +555,7 @@ margin-bottom: 8px;
   line-height: 1.7;
   letter-spacing: 0.03em;
   text-decoration: none;
-
-  
+ 
 }
 
 .title-footer{
@@ -512,6 +566,7 @@ margin-bottom: 8px;
   display: flex;
   align-items: center;
   justify-content: center;
+  padding-bottom: 100px;
 }
 
 .footer-icon-link{
@@ -528,7 +583,7 @@ margin-bottom: 8px;
   text-align: center;
 }
 
-.footer-icon-link:not(:last-child){
+.footer-icons-link:not(:last-child){
   margin-right: 10px;
 }
 
@@ -541,46 +596,17 @@ margin-bottom: 8px;
   fill: var(--primary-background-color);
 }
 
-
-/* button */
-.button{
-  color:var(--primary-text-color);
-  background-color: var(--secondary-background-color); 
-  border-color: var(--secondary-background-color); 
-  font-family: inherit;
-  font-style: normal;
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.6;
-  text-align: center;
-  letter-spacing: 0.03em;
-  border-radius: 4px;
-  
-  }
-
-.button:hover,
-.button:focus{
- background-color:var(--accent-color);
- color:var(--accent-color-white);
-}
-
-.button-list{
-  padding-bottom: 0px;
-}
-
-.gallery-content{
-  padding-top: 34px;
-}
-
 .footer-content{
   display: flex;
-}
+  margin-left: 214px;
+ }
 
 .footer-address{
   margin-right: 69px;
   margin-top: 60px;
+  margin-bottom: 60px;
 }
 
 .footer-links{
-  margin-top: 60px;
+  margin-top: 72px;
 }
