--- a/css/styles.css
+++ b/css/styles.css
@@ -155,12 +155,27 @@ color:var(--accent-color);
  margin-left: 85px;
 }
 
+.site-nav .item{
+  position: relative;
+}
+
 .site-nav .current{
   color: var(--accent-color);
 }
 
 .site-nav .item:not(:last-child) {
  margin-right: 50px;
+}
+
+.current::after{
+content: '';
+position: absolute;
+bottom: 0;
+left: 0;
+height: 4px;
+border-radius: 2px;
+width: 100%;
+background-color: var(--accent-color);
 }
 
 .contacts-nav{
@@ -264,7 +279,44 @@ color:var(--secondary-text-color);
 
 .services{
   display: flex;
+  justify-content: center;
+  align-items: center;
 }
+
+.services-img{
+  position: relative;
+}
+
+.section-services{
+  color: var(--accent-color-white); 
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  height: 70px;
+  width: 370px;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  }
+
+ .section-services::before{
+  display: inline-block;
+  position: absolute;
+  content: '';
+  width: 100%;
+  height: 100%;
+  background-color:rgba(47, 48, 58, 0.8); 
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0%);
+  
+ }
+
 
 .services .item:not(:last-child){
 margin-right: 30px;
@@ -340,15 +392,7 @@ color: #212121;
  margin-bottom: 0px;
 }
 
-.section-services{
- color: var(--accent-color-white); 
- font-weight: 700;
- font-size: 14px;
- line-height: 1.14;
- text-align: center;
- text-transform: uppercase;
- background-color: var(--footer-background-color);
-}
+
 .team{
  background-color: var(--secondary-background-color);
 }
