--- a/css/styles.css
+++ b/css/styles.css
@@ -304,12 +304,12 @@ color:var(--secondary-text-color);
   padding-bottom: 27px;
   }
 
- .section-services::before{
+ .services-img::before{
   display: inline-block;
   position: absolute;
   content: '';
   width: 100%;
-  height: 100%;
+  height: 70px;
   background-color:rgba(47, 48, 58, 0.8); 
   bottom: 0;
   left: 50%;
@@ -322,6 +322,11 @@ color:var(--secondary-text-color);
 margin-right: 30px;
 }
 
+.card{
+ background-color: var(--primary-background-color);
+ box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
 .section{
   text-align: center;
   padding-top: 94px;
@@ -332,6 +337,7 @@ margin-right: 30px;
 font-weight: 400;
 font-size: 16px;
 line-height: 1.58;
+padding-left: 24px;
 }
 
 
@@ -343,6 +349,7 @@ font-size: 18px;
 line-height: 2;
 letter-spacing: 0.06em;
 color: #212121;
+padding-left: 24px;
 }
 
 
@@ -381,16 +388,7 @@ color: #212121;
   margin-bottom: 16px;
 }
 
-.section-paragraph{
- color: #FFFFFF; 
- font-family: Roboto;
- font-weight: 400;
- font-size: 18px;
- line-height: 1.5;
- background-color: var(--accent-color);
- margin-top: 0px;
- margin-bottom: 0px;
-}
+
 
 
 .team{
@@ -504,6 +502,10 @@ margin-right: 10px;
   text-align: left;
 }
 
+.product-card{
+  position: relative;
+}
+
 .section-paragraph{
   display: flex;
   justify-content: center;
@@ -519,7 +521,24 @@ margin-right: 10px;
   font-size: 18px;
   line-height: 1.55;
   letter-spacing: 0.03em;
-}
+  position: absolute;
+  top: 0;
+  right: 0;
+  color: #FFFFFF; 
+  font-family: Roboto;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 1.5;
+  background-color:rgba(33, 150, 243, 0.9); 
+  margin-top: 0px;
+  margin-bottom: 0px;
+  opacity: 0;
+ }
+
+ .section-paragraph:hover, 
+ .section-paragraph:focus{
+   opacity: 1;
+ }
 
 /* button */
 .button{
